# kkanbu

trading/: pyproject.toml
trading/backtester/: backtester.py
trading/bot/: telegram_bot.py  urls.py
trading/bot/models/: api_key.py
trading/bot/oms/: order_manager.py
trading/bot/scheduler/: bot_scheduler.py
trading/bot/strategy/: rsi.py
trading/bot/templates/bot/: index.html  key-setting.html  login.html  trading-setting.html
trading/bot/views/: common.py  trading.py  user.py
trading/collector/: historical_collector.py  market_data_collector.py  real_time_collector.py
trading/collector/models/: candle.py  strategy.py
trading/collector/scheduler/: candle_scheduler.py
trading/trading/: scheduler.py  settings.py  urls.py
